--- a/index.html
+++ b/index.html
@@ -37,11 +37,21 @@
 
 		<div id="impress">
 
-			<div id="bg" class="step" data-z="-30" />
+			<div id="fb" class="step" data-scale="10"></div>
+
+			<div id="bg" class="step" data-z="-30"></div>
 				
 			<div id="title" class="step">
+					<div id="uni">Unicorn</div>
+					<div id="tag">A System for Searching the Social Graph</div>
+					<div id="cover-details">
+						<div id="name">Shine Nelson</div>
+						<div id="info">61 | S7 | CSE</div>
+						<div id="colg">MBCET, Trivandrum</div>
+					</div>
+			</div>
 
-			<div id="overview" class="step" data-scale="10" />
+			<div id="overview" class="step" data-scale="10"></div>
 
 		</div>
 
