Added References, Bibliography and Credits

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 			<div id="fb" class="step" data-scale="10"></div>
 
-			<div id="bg" class="step" data-z="-30"></div>
+			<div id="bg" class="step"></div>
 				
 			<div id="title" class="step">
 					<div id="uni">Unicorn</div>
@@ -49,6 +49,39 @@
 						<div id="info">61 | S7 | CSE</div>
 						<div id="colg">MBCET, Trivandrum</div>
 					</div>
+			</div>
+
+			<div id="credits" class="step" data-x="5500">
+				<div id="ref">
+					<div class="cred-title">References</div>
+					<div id="ref-content">
+						[1] Michael Curtiss et al. <strong>(Facebook, Inc.)</strong>, <em>“Unicorn: A System for Searching the Social Graph”</em>, The 39<sup>th</sup> International Conference on Very Large Data Bases 2013, Riva del Garda, Trento, ©2013, August 27, 2013.
+					</div>
+				</div>
+				<div id="biblio">
+					<div class="cred-title">Bibliography</div>
+					<div id="biblio-content">
+						[1] <a href="http://en.wikipedia.org/wiki/Adjacency_list" target="_blank">http://en.wikipedia.org/wiki/Adjacency_list</a><br>
+						[2] <a href="http://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">http://en.wikipedia.org/wiki/Apache_Thrift</a><br>
+						[3] <a href="http://en.wikipedia.org/wiki/Apache_Hadoop" target="_blank">http://en.wikipedia.org/wiki/Apache_Hadoop</a><br>
+					</div>
+				</div>
+				<div id="cred">
+					<div class="cred-title">Credits</div>
+					<div id="cred-content">
+						<ul>
+							<li>Presentation Framework : <a href="https://github.com/bartaz/impress.js" target="_blank">impressJS</a> - <a href="https://github.com/bartaz" target="_blank">Bartek Szopka (https://github.com/bartaz)</a></li>
+							<li>Fonts :
+								<ul>
+									<li><a href="https://www.google.com/fonts/specimen/Open+Sans" target="_blank">Open-Sans</a> : <a href="https://www.google.com/fonts/specimen/Open+Sans" target="_blank">https://www.google.com/fonts/specimen/Open+Sans</a></li>
+									<li>Ozzy II</li>
+								</ul>
+							</li>
+							<li>Direct Presentation Link : <a href="https://shinescodes.github.io/unicorn" target="_blank">https://shinescodes.github.io/unicorn</a></li>
+							<li>Download Link : <a href="https://github.com/shinescodes/unicorn/archive/master.zip" target="_blank">https://github.com/shinescodes/unicorn/archive/master.zip</a></li>
+						</ul>
+					</div>
+				</div>				
 			</div>
 
 			<div id="overview" class="step" data-scale="10"></div>
