--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
 		<div id="impress">
 
-			<div id="fb" class="step" data-scale="10"></div>
-
+			<div id="fb-graph" class="step" data-z="10000"></div>
 			<div id="bg" class="step"></div>
 				
 			<div id="title" class="step">
@@ -49,6 +48,28 @@
 						<div id="info">61 | S7 | CSE</div>
 						<div id="colg">MBCET, Trivandrum</div>
 					</div>
+			</div>
+
+			<div id="nw-world" class="step" data-y="2000" data-z="-2500">
+				Today, the world is all networked. Connected. <br>
+				Everyone is connected to each other in some way.
+			</div>
+
+			<div id="fb" class="step" data-x="1500" data-y="2000"></div>
+			<div id="twit" class="step" data-x="1500" data-y="2000">
+				<img alt="twitter" src="assets/img/twitter.png" />
+			</div>
+			<div id="gplus" class="step" data-x="1500" data-y="2000">
+				<img alt="g+" src="assets/img/gplus.png" />
+			</div>
+
+			<div id="net-min-intel" class="step" data-x="3000" data-y="2000">
+				<p>Infographic courtesy : <a href="http://www.intel.com/content/www/us/en/communications/internet-minute-infographic.html" target="_blank">Intel</a></p>
+			</div>
+
+			<div id="net-RT" class="step" data-x="3000" data-y="3000">
+				<iframe src="http://pennystocks.la/internet-in-real-time/" width="750" height="700"></iframe>
+				<p>Infographic courtesy : <a href="http://pennystocks.la/internet-in-real-time/" target="_blank">PennyStocks.la</a></p>
 			</div>
 
 			<div id="credits" class="step" data-x="5500">
