--- a/index.html
+++ b/index.html
@@ -63,20 +63,34 @@
 				<img alt="g+" src="assets/img/gplus.png" />
 			</div>
 
-			<div id="net-min-intel" class="step" data-x="3000" data-y="2000">
+			<div id="net-min-intel" class="step" data-x="3000" data-z="2000">
 				<p>Infographic courtesy : <a href="http://www.intel.com/content/www/us/en/communications/internet-minute-infographic.html" target="_blank">Intel</a></p>
 			</div>
 
-			<div id="net-RT" class="step" data-x="3000" data-y="3000">
+			<div id="net-RT" class="step" data-x="5000" data-y="3000" data-z="4500">
 				<iframe src="http://pennystocks.la/internet-in-real-time/" width="750" height="700"></iframe>
 				<p>Infographic courtesy : <a href="http://pennystocks.la/internet-in-real-time/" target="_blank">PennyStocks.la</a></p>
+			</div>
+
+			<div id="graph_paper" class="step" data-x="6500" data-y="3000" data-z="4500">
+				<figure>
+					<img alt="graph_paper" src="assets/img/GraphCanvas_Paper.png" />
+					<figcaption>Courtesy : <a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</figcaption>
+				</figure>
+			</div>
+
+			<div id="my-graph" class="step" data-x="6000" data-y="3000" data-z="3500">
+				<figure>
+					<img alt="my-graph" src="assets/img/GraphCanvas_Crop.png" />
+					<figcaption>Courtesy : <a href="https://app.friendsgraph.me/" target="_blank">FriendsGraph</a></figcaption>
+				</figure>
 			</div>
 
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
 					<div id="ref-content">
-						[1] Michael Curtiss et al. <strong>(Facebook, Inc.)</strong>, <em>“Unicorn: A System for Searching the Social Graph”</em>, The 39<sup>th</sup> International Conference on Very Large Data Bases 2013, Riva del Garda, Trento, ©2013, August 27, 2013.
+						[1] Michael Curtiss et al. <strong>(Facebook, Inc.)</strong>, <a href="https://www.facebook.com/publications/219621248185635/" target="_blank"><em>“Unicorn: A System for Searching the Social Graph”</em></a>, The 39<sup>th</sup> International Conference on Very Large Data Bases 2013, Riva del Garda, Trento, ©2013, August 27, 2013.
 					</div>
 				</div>
 				<div id="biblio">
