Graph Edge Types

--- a/index.html
+++ b/index.html
@@ -86,6 +86,42 @@
 				</figure>
 			</div>
 
+			<div id="edge-types" class="step edge" data-x="6000" data-y="4000" data-z="4500">
+				Edge Types
+			</div>
+
+			<div id="friends" class="step edge" data-x="5725" data-y="3925" data-z="4500">
+				friends
+			</div>
+
+			<div id="likes" class="step edge" data-x="5900" data-y="3850" data-z="4500">
+				likes
+			</div>
+
+			<div id="likers" class="step edge" data-x="6100" data-y="3850" data-z="4500">
+				likers
+			</div>
+
+			<div id="tagdin" class="step edge" data-x="6300" data-y="3925" data-z="4500">
+				tagged-in
+			</div>
+
+			<div id="tags" class="step edge" data-x="6300" data-y="4075" data-z="4500">
+				tags
+			</div>
+
+			<div id="atnds" class="step edge" data-x="6010" data-y="4150" data-z="4500">
+				attended
+			</div>
+
+			<div id="livsin" class="step edge" data-x="5750" data-y="4075" data-z="4500">
+				lives-in
+			</div>
+
+			<div id="edge-types" class="step edge" data-x="6000" data-y="4000" data-z="4500">
+				Edge Types
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
