Unicorn Data Model

--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
 				Edge Types
 			</div>
 
+			<div id="data-model" class="step" data-x="8000" data-y="4000" data-z="4500">
+				<p class="title">Data Model</p>
+				<p id="inv-idx-adj-lst"><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> is an <strong>inverted index</strong> service that implements an <strong>adjacency list</strong> service<sup>[1]</sup></p>
+				<hr>
+				<p class="citation">[1] <a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn: A System for Searching the Social Graph</a>, Michael Curtiss et al. <em>(Facebook, Inc.)</em> <br> The 39<sup>th</sup> International Conference on Very Large Data Bases 2013</p>
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
