--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
 				<p class="citation">[1] <a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn: A System for Searching the Social Graph</a>, Michael Curtiss et al. <em>(Facebook, Inc.)</em> <br> The 39<sup>th</sup> International Conference on Very Large Data Bases 2013</p>
 			</div>
 
+			<div id="query-lang" class="step" data-x="8000" data-y="6000" data-z="7500">
+				<p class="title">Query Language</p>
+				<p id="thrift"><a href="http://thrift.apache.org/" target="_blank">Thrift</a> is an <strong><em>interface definition language</em></strong> and binary communication protocol that is used to define and create services for numerous languages.<sup>[1]</sup></p>
+					<ul>
+						<li>It is used as a Remote Procedure Call (RPC) framework</li>
+						<li>Developed at Facebook for <strong><em>"scalable cross-language services development"</em></strong>.</li>
+						<li>It combines a software stack with a code generation engine to build services that work efficiently to a varying degree and seamlessly between <strong><em>C#, C++, Cappuccino, Cocoa, Delphi, Erlang, Go, Haskell, Java, Node.js, OCaml, Perl, PHP, Python, Ruby and Smalltalk</em></strong>.</li>
+						<li>Although developed at Facebook, it is now an open source project in the <a href="http://thrift.apache.org/" target="_blank">Apache Software Foundation</a>.</li>
+					</ul>
+				<hr>
+				<p class="citation">[1] <a href="http://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">Apache Thrift - Wikipedia</a></p>
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
