--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
 				<p class="citation">[1] <a href="http://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">Apache Thrift - Wikipedia</a></p>
 			</div>
 
+			<div id="query-op" class="step" data-x="10500" data-y="8000" data-z="3000">
+				<p class="title">Query Operations</p>
+				<ul>
+					<li>OR</li>
+					<li>AND</li>
+					<li>DIFFERENCE</li>
+				</ul>
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
