--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
 				</ul>
 			</div>
 
+			<div id="arch" class="step" data-x="10500" data-y="10000" data-z="4500">
+				<p class="title">Architecture</p>
+				<figure>
+					<img alt="unicorn architecture" src="assets/img/architecture.png" />
+					<figcaption>Courtesy : <a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</figcaption>
+				</figure>
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
