Modified Courtesy information and styling

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<p class="title">Architecture</p>
 				<figure>
 					<img alt="unicorn architecture" src="assets/img/architecture.png" />
-					<figcaption>Courtesy : <a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</figcaption>
+					<figcaption>Courtesy : Figure 3 <br><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</figcaption>
 				</figure>
 			</div>
 
