Entity management - Clustering

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
 				</figure>
 			</div>
 
+			<div id="arch-cluster" class="step" data-x="12500" data-y="12000" data-z="6000">
+				<p class="title">Architecture - Clustering</p>
+				<figure>
+					<img alt="unicorn architecture" src="assets/img/arch_cluster.png" />
+					<figcaption>Courtesy : Figure 4 <br><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</figcaption>
+				</figure>
+			</div>
+
 			<div id="credits" class="step" data-x="5500">
 				<div id="ref">
 					<div class="cred-title">References</div>
