Updated personal graph via https://app.friendsgraph.me/

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			<div id="my-graph" class="step" data-x="6000" data-y="3000" data-z="3500">
 				<figure>
-					<img alt="my-graph" src="assets/img/GraphCanvas_Crop.png" />
+					<img alt="my-graph" src="assets/img/GraphCanvas.png" />
 					<figcaption>Courtesy : <a href="https://app.friendsgraph.me/" target="_blank">FriendsGraph</a></figcaption>
 				</figure>
 			</div>
