--- a/index.html
+++ b/index.html
@@ -172,26 +172,46 @@
 				<p class="handler">Handled by Top Aggregator</p>
 
 				<ol id="apply-proc" class="alg">
-					<li><strong>procedure</strong> APPLY (<em> prefix, innerQ </em>)</li>
-					<li><em>innerResults</em> &#8592; SEARCH(<em> innerQ </em>)</li>
+					<li><strong>procedure</strong> <span class="call">APPLY</span> (<em> prefix, innerQ </em>)</li>
+					<li><em>innerResults</em> &#8592; <span class="call">SEARCH</span> (<em> innerQ </em>)</li>
 					<li><em>outerQ &#8592; "(or"</em></li>
 					<li><strong>for each</strong> <em>result</em> in <em>innerResults</em> <strong>limit</strong> <em>L</em> <strong>do</strong></li>
-					<li><em>term</em> &#8592; CONCAT(<em> prefix, ":", result.id </em>)</li>
-					<li><em>outerQ</em> &#8592; CONCAT(<em> outerQ, " ", term </em>)</li>
+					<li><em>term</em> &#8592; <span class="call">CONCAT</span> (<em> prefix, ":", result.id </em>)</li>
+					<li><em>outerQ</em> &#8592; <span class="call">CONCAT</span> (<em> outerQ, " ", term </em>)</li>
 					<li><strong>end for</strong></li>
-					<li><em>outerQ</em> &#8592; CONCAT(<em> outerQ, ")" </em>)</li>
-					<li><em>outerResults</em> &#8592; SEARCH(<em> outerQ </em>)</li>
+					<li><em>outerQ</em> &#8592; <span class="call">CONCAT</span> (<em> outerQ, ")" </em>)</li>
+					<li><em>outerResults</em> &#8592; <span class="call">SEARCH</span> (<em> outerQ </em>)</li>
 					<li><strong>return</strong> <em>outerResults</em></li>
 					<li><strong>end procedure</strong></li>
 				</ol>
 				<ol id="search-proc" class="alg">
-					<li><strong>procedure</strong> SEARCH (<em> query </em>)</li>
+					<li><strong>procedure</strong> <span class="call">SEARCH</span> (<em> query </em>)</li>
 					<li>&#9655; Fetches query results from leaves and merges</li>
 					<li><strong>return</strong> <em>results</em></li>
 					<li><strong>end procedure</strong></li>
 				</ol>
 				
-				<p id="courtesy">Courtesy : Algorithm 1 <br><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</p>
+				<p class="courtesy">Courtesy : Algorithm 1 <br><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</p>
+			</div>
+
+			<div id="extract" class="step" data-x="12500" data-y="15000">
+				<p class="title">ALGORITHM : <strong>EXTRACT</strong> Operator</p>
+				<p class="handler">Handled by Index Server</p>
+
+				<ol class="alg">
+					<li><strong>procedure</strong> <span class="call">EXTRACT</span> (<em> query, extractKey </em>)</li>
+					<li><em>extractSet &#8592; None</em></li>
+					<li><em>eKey &#8592; extractKey</em></li>
+					<li><em>iter = execute ( query )</em></li>
+					<li><strong>for each</strong> <em>result</em> in <em>iter</em> <strong>do</strong></li>
+					<li><em>e</em> = <span class="call">LOOKUP</span> (<em> fwdIndex, result.id, eKey </em>)</li>
+					<li><span class="call">INSERT</span> (<em> extractSet, e </em>)</li>
+					<li><strong>end for</strong></li>
+					<li><strong>return</strong> <em>extractSet.results</em></li>
+					<li><strong>end procedure</strong></li>
+				</ol>
+				
+				<p class="courtesy">Courtesy : Algorithm 2 <br><a href="https://www.facebook.com/publications/219621248185635/" target="_blank">Unicorn</a> - facebook</p>
 			</div>
 
 			<div id="credits" class="step" data-x="5500">
