--- a/index.html
+++ b/index.html
@@ -224,9 +224,32 @@
 				<div id="biblio">
 					<div class="cred-title">Bibliography</div>
 					<div id="biblio-content">
-						[1] <a href="http://en.wikipedia.org/wiki/Adjacency_list" target="_blank">http://en.wikipedia.org/wiki/Adjacency_list</a><br>
-						[2] <a href="http://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">http://en.wikipedia.org/wiki/Apache_Thrift</a><br>
-						[3] <a href="http://en.wikipedia.org/wiki/Apache_Hadoop" target="_blank">http://en.wikipedia.org/wiki/Apache_Hadoop</a><br>
+						<table>
+							<tbody>
+								<tr>
+									<td>[1] <a href="https://facebook.com/about/graphsearch/" target="_blank">Facebook Graph Search</a></td>
+									<td>[2] <a href="https://en.wikipedia.org/wiki/Adjacency_list" target="_blank">https://en.wikipedia.org/wiki/Adjacency_list</a></td>
+								</tr>
+								<tr>
+									<td>[3] <a href="https://thrift.apache.org/" target="_blank">Apache Thrift</a></td>
+									<td>[4] <a href="https://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">https://en.wikipedia.org/wiki/Apache_Thrift</a></td>
+								</tr>
+								<tr>
+									<td>[5] <a href="https://hadoop.apache.org" target="_blank">Apache Hadoop</a></td>
+									<td>[6] <a href="https://en.wikipedia.org/wiki/Apache_Hadoop" target="_blank">https://en.wikipedia.org/wiki/Apache_Hadoop</a></td>
+								</tr>
+								<tr>
+									<td>[7] <a href="https://en.wikipedia.org/wiki/Inverted_index" target="_blank">https://en.wikipedia.org/wiki/Inverted_index</a></td>
+								</tr>
+							</tbody>
+						</table>
+						<!-- [1] <a href="https://facebook.com/about/graphsearch/" target="_blank">Facebook Graph Search</a><br>
+						[2] <a href="https://en.wikipedia.org/wiki/Adjacency_list" target="_blank">https://en.wikipedia.org/wiki/Adjacency_list</a><br>
+						[3] <a href="https://en.wikipedia.org/wiki/Inverted_index" target="_blank">https://en.wikipedia.org/wiki/Inverted_index</a><br>
+						[4] <a href="https://thrift.apache.org/" target="_blank">Apache Thrift</a><br>
+						[5] <a href="https://en.wikipedia.org/wiki/Apache_Thrift" target="_blank">https://en.wikipedia.org/wiki/Apache_Thrift</a><br>
+						[6] <a href="https://hadoop.apache.org" target="_blank">Apache Hadoop</a><br>
+						[7] <a href="https://en.wikipedia.org/wiki/Apache_Hadoop" target="_blank">https://en.wikipedia.org/wiki/Apache_Hadoop</a><br> -->
 					</div>
 				</div>
 				<div id="cred">
@@ -234,6 +257,12 @@
 					<div id="cred-content">
 						<ul>
 							<li>Presentation Framework : <a href="https://github.com/bartaz/impress.js" target="_blank">impressJS</a> - <a href="https://github.com/bartaz" target="_blank">Bartek Szopka (https://github.com/bartaz)</a></li>
+							<li>Infographics :
+								<ul>
+									<li><a href="http://www.intel.in/content/www/in/en/communications/internet-minute-infographic.html" target="_blank">What happens in an Internet Minute : Intel</a></li>
+									<li><a href="http://pennystocks.la/internet-in-real-time/" target="_blank">Internet in Real Time : PennyStocks.la</a></li>
+								</ul>
+							</li>
 							<li>Fonts :
 								<ul>
 									<li><a href="https://www.google.com/fonts/specimen/Open+Sans" target="_blank">Open-Sans</a> : <a href="https://www.google.com/fonts/specimen/Open+Sans" target="_blank">https://www.google.com/fonts/specimen/Open+Sans</a></li>
